# market-risk-engine

./: .gitignore  LICENSE  METHODOLOGY.md  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
src/marketrisk/: __init__.py  backtest.py  cli.py  data.py  decompose.py  evt.py  report.py  returns.py  scenarios.py  var.py  volatility.py
tests/: test_backtest.py  test_cli.py  test_data_returns.py  test_decompose.py  test_evt.py  test_scenarios.py  test_var.py  test_volatility.py
